[package]
name = "serde_ipld_dagjson"
version = "0.1.0"
authors = [
    "Volker Mische <volker.mische@gmail.com>"
]
repository = "https://github.com/vmx/serde_ipld_dagjson"
edition = "2021"
description = "IPLD DAG-JSON support for Serde."
license = "MIT OR Apache-2.0"
categories = ["data-structures", "encoding"]

[dependencies]
#cid = { version = "0.11.0", features = ["serde-codec"] }
cid = { git = "https://github.com/multiformats/rust-cid", branch = "cid-as-enum", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
ipld-core = { version = "0.1.0", features = ["serde"] }

[dev-dependencies]
#ipld-core = { version = "0.1.0", features = ["serde"] }
serde_bytes = "0.11.14"

[patch.crates-io]
cid = { git = "https://github.com/multiformats/rust-cid", branch = "cid-as-enum" }
ipld-core = { git = "https://github.com/vmx/ipld-core", branch = "cid-as-enum" }
